# soladrome

./: .gitignore  .vercelignore  Anchor.toml  BUYBACK_DESIGN.md  CLAUDE.md  CONFIDENTIAL_BRIBES_DESIGN.md  Cargo.toml  GRANT_APPLICATION.md  GRANT_RESUBMISSION_2026-07.md  JUPITER_ADAPTER_DESIGN.md  LICENSE  MAINNET_RUNBOOK.md  SECURITY.md  SECURITY_WATCH.md  SEEKER_DAPP_STORE.md  SPEC.md  TOKENOMICS.md  WHITELIST_ONBOARDING_DESIGN.md  WHITEPAPER.md  check_claims.ts  check_emissions.ts  check_epoch.ts  check_fees.ts  package.json  vercel.json
.github/workflows/: ci.yml
app/: .gitignore  LICENSE  next.config.js  package.json  tailwind.config.js  tsconfig.tsbuildinfo
app/app/: globals.css  layout.tsx  manifest.ts  page.tsx  providers.tsx
app/components/: ActionPanel.tsx  Airdrop.tsx  AmmSwap.tsx  Borrow.tsx  Bridge.tsx  BuySell.tsx  ClaimBribe.tsx  ClaimFees.tsx  ConnectButton.tsx  ContributorPanel.tsx  Exercise.tsx  FlashArb.tsx  Gauge.tsx  (+12 more)
programs/soladrome/: Cargo.toml
programs/soladrome/src/: amm.rs  amm_math.rs  amm_state.rs  errors.rs  lib.rs  math.rs  pol.rs  state.rs  ve.rs
scripts/: check_arb.ts  check_bribes.ts  check_claim.ts  check_epoch_full.ts  claim_contributor.ts  claim_partner.ts  configure_continuous_emissions.ts  distribute_osola.ts  init_devnet.ts  init_mainnet.ts  mint_founder_allocation.ts  partner_deposit_bribe.ts  register_all_partners.ts  register_contributor.ts  register_partner.ts  set_phase_flags.ts
supabase/: quests.sql  wallet_verdicts.sql  whitelist.sql
tests/: lp_emissions_bankrun.ts  soladrome.ts
trident-tests/: Trident.toml
(+768 files in other folders)
